openshift-ingress-canary/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:47:09Z"
    labels:
      ingress.openshift.io/canary: canary_controller
    name: ingress-canary
    namespace: openshift-ingress-canary
    resourceVersion: "491646543"
    uid: 2c5eb6b8-a8cc-4252-a31e-f532b222dd40
  subsets:
  - addresses:
    - ip: 10.128.20.5
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: ingress-canary-gttbn
        namespace: openshift-ingress-canary
        resourceVersion: "472847087"
        uid: 52d7dbd9-641b-434d-a02d-736499cec5b3
    - ip: 10.128.22.6
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: ingress-canary-2gts2
        namespace: openshift-ingress-canary
        resourceVersion: "476624511"
        uid: 27f1e113-f7ef-46f5-8adc-095bd5cd9c5c
    - ip: 10.129.16.17
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: ingress-canary-kbnb8
        namespace: openshift-ingress-canary
        resourceVersion: "472917972"
        uid: fbfe1cc1-67df-421f-8b5e-a719e87aa389
    - ip: 10.129.22.5
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
      targetRef:
        kind: Pod
        name: ingress-canary-n2c4v
        namespace: openshift-ingress-canary
        resourceVersion: "380476234"
        uid: fafb3157-d089-4fd0-8ca8-9b0381f1f2f5
    - ip: 10.130.16.3
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: ingress-canary-pmmlt
        namespace: openshift-ingress-canary
        resourceVersion: "467404327"
        uid: c01bb92c-49bf-4b46-b009-38c52d6ed97a
    - ip: 10.130.20.6
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: ingress-canary-wf2gb
        namespace: openshift-ingress-canary
        resourceVersion: "476624852"
        uid: 6af8f5ee-4809-4cbb-b313-452a3b334dbf
    - ip: 10.130.22.4
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: ingress-canary-vk5f8
        namespace: openshift-ingress-canary
        resourceVersion: "428583530"
        uid: deb47cd0-3150-44dd-9ee9-089d456c08f9
    - ip: 10.131.18.3
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: ingress-canary-mfxxs
        namespace: openshift-ingress-canary
        resourceVersion: "491646541"
        uid: 3e746359-d915-490c-9968-2d1114f58560
    - ip: 10.131.22.4
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: ingress-canary-k84sz
        namespace: openshift-ingress-canary
        resourceVersion: "466147297"
        uid: 1c073cc4-c8f6-4c81-9fad-43df17f6f29d
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
    - name: 8888-tcp
      port: 8888
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
