openshift-ingress-canary/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.16.17
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    targetRef:
      kind: Pod
      name: ingress-canary-kbnb8
      namespace: openshift-ingress-canary
      resourceVersion: "472917972"
      uid: fbfe1cc1-67df-421f-8b5e-a719e87aa389
    zone: brazilsouth-1
  - addresses:
    - 10.130.16.3
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: ingress-canary-pmmlt
      namespace: openshift-ingress-canary
      resourceVersion: "467404327"
      uid: c01bb92c-49bf-4b46-b009-38c52d6ed97a
    zone: brazilsouth-2
  - addresses:
    - 10.131.18.3
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
    targetRef:
      kind: Pod
      name: ingress-canary-mfxxs
      namespace: openshift-ingress-canary
      resourceVersion: "491646541"
      uid: 3e746359-d915-490c-9968-2d1114f58560
    zone: brazilsouth-1
  - addresses:
    - 10.128.20.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: ingress-canary-gttbn
      namespace: openshift-ingress-canary
      resourceVersion: "472847087"
      uid: 52d7dbd9-641b-434d-a02d-736499cec5b3
    zone: brazilsouth-2
  - addresses:
    - 10.130.20.6
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: ingress-canary-wf2gb
      namespace: openshift-ingress-canary
      resourceVersion: "476624852"
      uid: 6af8f5ee-4809-4cbb-b313-452a3b334dbf
    zone: brazilsouth-1
  - addresses:
    - 10.129.22.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
    targetRef:
      kind: Pod
      name: ingress-canary-n2c4v
      namespace: openshift-ingress-canary
      resourceVersion: "380476234"
      uid: fafb3157-d089-4fd0-8ca8-9b0381f1f2f5
    zone: brazilsouth-1
  - addresses:
    - 10.130.22.4
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
    targetRef:
      kind: Pod
      name: ingress-canary-vk5f8
      namespace: openshift-ingress-canary
      resourceVersion: "428583530"
      uid: deb47cd0-3150-44dd-9ee9-089d456c08f9
    zone: brazilsouth-2
  - addresses:
    - 10.131.22.4
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: ingress-canary-k84sz
      namespace: openshift-ingress-canary
      resourceVersion: "466147297"
      uid: 1c073cc4-c8f6-4c81-9fad-43df17f6f29d
    zone: brazilsouth-3
  - addresses:
    - 10.128.22.6
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: ingress-canary-2gts2
      namespace: openshift-ingress-canary
      resourceVersion: "476624511"
      uid: 27f1e113-f7ef-46f5-8adc-095bd5cd9c5c
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-04T21:47:09Z"
    generateName: ingress-canary-
    generation: 537
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      ingress.openshift.io/canary: canary_controller
      kubernetes.io/service-name: ingress-canary
    name: ingress-canary-scqds
    namespace: openshift-ingress-canary
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: ingress-canary
      uid: aeed00e7-4826-4a3f-83bc-ce5cf3facff1
    resourceVersion: "491646544"
    uid: c644cb91-7cb0-4990-a7b5-9971a52e105f
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
  - name: 8080-tcp
    port: 8080
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
